<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.foreldrepenger.autotest</groupId>
    <artifactId>autotest</artifactId>
    <packaging>jar</packaging>
    <version>${revision}${sha1}${changelist}</version>
    <name>FPSAK :: AutoTest</name>

    <properties>
        <java.version>15</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0.0</revision>
        <sha1/>
        <changelist>-SNAPSHOT</changelist>

        <vtp.versjon>1.0.8</vtp.versjon>
        <dokumentgenerator.version>1.0-20200327105749-73dec14</dokumentgenerator.version>
        <aspectj.version>1.9.6</aspectj.version>
        <jackson.version>2.12.2</jackson.version>
        <jersey.version>2.33</jersey.version>
    </properties>

    <profiles>
        <profile>
            <id>fpsak</id>
            <properties>
                <includeTestsTags>fpsak</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fptilbake</id>
            <properties>
                <testsTags>fptilbake, tilbakekreving</testsTags>
                <testPackage>no.nav.foreldrepenger.autotest.fptilbake.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fprisk</id>
            <properties>
                <testTags>fprisk</testTags>
                <testPackage>no.nav.foreldrepenger.autotest.fprisk.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>svangerskapspenger</id>
            <properties>
                <includeTestsTags>svangerskapspenger</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>verdikjede</id>
            <properties>
                <includeTestsTags>verdikjede</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>utvikling</id>
            <properties>
                <includeTestsTags>utvikling</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>logger</id>
            <properties>
                <includeTestsTags>logger</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>internal</id>
            <properties>
                <includeTestsTags>internal</includeTestsTags>
                <excludeTestsTags>pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.internal.**</testPackage>
            </properties>
            <activation>
            	<activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --enable-preview
                        -Dfile.encoding=UTF-8
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <properties>
                        <configurationParameters>
                            junit.jupiter.execution.parallel.enabled = true
                            junit.jupiter.execution.parallel.mode.default = concurrent
                            junit.jupiter.execution.parallel.config.strategy = custom
                            junit.jupiter.execution.parallel.config.custom.class = no.nav.foreldrepenger.autotest.util.jupiter.CutstomExecutionStrategy
                        </configurationParameters>
                    </properties>
                    <includes>
                        <include>${testPackage}</include>
                    </includes>
                    <groups>${includeTestsTags}</groups>
                    <excludedGroups>${excludeTestsTags}</excludedGroups>
                    <systemPropertyVariables>
                        <application.root>${maven.multiModuleProjectDirectory}</application.root>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportDirectory>target/allure-report</reportDirectory>
                    <reportingOutputDirectory>target/allure-report</reportingOutputDirectory>
                    <reportVersion>2.13.1</reportVersion>
                    <allureDownloadUrl>https://repo1.maven.org/maven2/io/qameta/allure/allure-commandline/2.13.1/allure-commandline-2.13.1.zip</allureDownloadUrl>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.18.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- VTP prosjektavhengigheter -->
        <dependency>
            <groupId>no.nav.foreldrepenger.vtp</groupId>
            <artifactId>testmodell</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.vtp</groupId>
            <artifactId>core</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>

        <!-- Autotest dokumentgenerator avhengigheter -->
        <dependency>
            <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
            <artifactId>inntektsmelding</artifactId>
            <version>${dokumentgenerator.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
            <artifactId>foreldrepengesoknad</artifactId>
            <version>${dokumentgenerator.version}</version>
        </dependency>

        <!-- External dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <version>1.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.19.0</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>2.13.8</version>
        </dependency>
        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jandex</artifactId>
            <version>2.2.3.Final</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.18</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-i18n</artifactId>
            <version>1.27</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-parameter-names</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.connectors</groupId>
            <artifactId>jersey-apache-connector</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${jersey.version}</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fpsak-autotest</url>
        </repository>
    </distributionManagement>
</project>
